<resources>
    <string name="app_name">Petagram</string>
    <string name="mAbout">Acerca de</string>
    <string name="mContact">Contacto</string>
    <string name="HintNombre">Nombre</string>
    <string name="HintEmail">Email</string>
    <string name="SendButton">Enviar comentario</string>
    <string name="MessageTitle">Mensaje</string>
    <string name="AboutDev">Nombre del desarrollador: Guillermo Gómez Sánchez, originario de México</string>
    <string name="RemEmail">Correo del Remitente</string>
    <string name="RemPassword">Contraseña del Remitente</string>
    <string name="MyDog">Marnie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
